--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
         </ul>
     </nav>
 </header>
+<main>
+    <section id="web">
+        <h1>Web dev</h1>
+    </section>
+    <section id="contato">
+        
+        <h1>Contato</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.121501121925!2d-46.654961425342314!3d-23.56407936169083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c7dbf9ff57%3A0x4ca8eb5c4f7ecca9!2sFIAP%20-%20Paulista!5e0!3m2!1sen!2sbr!4v1714651225658!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </section>
+</main>
 
 
 
